fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -34,5 +34,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(39, 31, 35, 0.144); /* Розовый цвет с прозрачностью */
+  background-color: rgba(39, 31, 35, 0.144);
+  z-index: -2;
 }
